Fix bug where sidebar background was showing up even if there was no overflow (temporary fix

--- a/app/assets/stylesheets/02_sidebar_main.scss
+++ b/app/assets/stylesheets/02_sidebar_main.scss
@@ -12,6 +12,17 @@ body {
   overflow: hidden;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0 ,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 div.main {
   position: absolute;
   margin-left: 52px;
@@ -37,7 +48,8 @@ div.main {
   display: flex;
   flex-direction: column;
   transition: all 0.4s;
-  overflow: auto;
+  overflow-x:hidden;
+  overflow: scroll;
 
   &:hover + .main {
     left: 291px;
@@ -117,7 +129,7 @@ div.main {
   margin-top: 40px;
   color: white;
   display: none;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   height: 100%;
 }
 
